주석과 응답객체 추가